<resources>
    <string name="app_name">SurveyIT_ver1</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="register">REGISTER</string>
    <string name="surveyit">SURVEYIT</string>
    <string name="login">LOGIN</string>
    <string name="create_account">Create Account</string>
    <string name="respondent">Respondent</string>
    <string name="researcher">Researcher</string>
    <string name="search">Search</string>
    <string name="searchicon">SearchIcon</string>
    <string name="questions">Questions</string>
    <string name="survey_name">Survey Name</string>
    <string name="description">Description</string>
    <string name="margin_of_errors">Margin of Errors (%)</string>
    <string name="question">Question</string>
    <string name="to">To</string>
    <string name="label_optional">Label (Optional)</string>
</resources>
